fixed 'jump' when <input> is focused

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,6 +44,7 @@ input {
   width: 100%;
   height: 34px;
   padding: 6px 12px;
+  border: 1px solid #ccc;
 }
 
 input:focus {
@@ -54,6 +55,7 @@ textarea {
   display: block;
   width: 100%;
   padding: 6px 12px;
+  border: 1px solid #ccc;
 }
 
 textarea:focus {
